# J-space-in-VLM

./: .gitignore  README.md  pyproject.toml
jlens/: __init__.py  lens.py  qwen3vl.py
scripts/: README.md  download_vqav2_val_subset.py  qwen3vl_compare_readouts.py  qwen3vl_counterfactual_color_probe.py  qwen3vl_jlens_experiment.py  qwen3vl_probe_target_word.py
tests/: test_fitting.py
